# rust-polytope

./: Cargo.toml  README.md
src/: element.rs  lib.rs  vector.rs  vertex.rs
